# crossplane

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: crossplane-ci.yml  docker.yml  release.yml
crossplane/: __init__.py  builder.py  lexer.py  parser.py
scripts/: check_hardcoded_ips.py
tests/: test_build.py  test_parse.py
