[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py37"
extend-exclude = [
  ".venv",
  ".tox",
  "dist",
  "build",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B105"]
